# biliTicker_gt

./: .gitattributes  .gitignore  Cargo.toml  README.md  bili_ticket_gt_python.pyi  build.rs  flake.nix  pyproject.toml  rust-toolchain.toml
.github/workflows/: CI.yml
bili_ticket_gt_python/: __init__.py  bili_ticket_gt_python.pyi
bili_ticket_gt_python/js/: click.js  package-lock.json  slide.js
docs/: ZANZHU.md
js/: click.js  slide.js
src/: abstraction.rs  click.rs  error.rs  implement.rs  lib.rs  py.rs  slide.rs  w.rs
