[package]
name = "bili_ticket_gt_python"
version = "0.2.7"
edition = "2021"

[lib]
name = "bili_ticket_gt_python"
crate-type = ["cdylib"]

[dependencies]
reqwest = {version = "0.12", features = ["blocking", "json"]}
serde = "1.0"
serde_json = "1.0"
ddddocr = { git = "https://github.com/86maid/ddddocr.git", branch = "master" }
image = "0.25"
pyo3 = { version = "0.21.2", features = ["auto-initialize", "extension-module"]}
mini-v8 = "0.4.1"
#ring = "0.17.8"